# stm32-drone

./: .gitignore  Cargo.toml  README.md  memory.x
.cargo/: config.toml
src/: controller.rs  main.rs  motors.rs  mpu.rs  pid.rs  pwm.rs  receiver.rs
