[package]
name = "stm32-drone"
version = "0.1.0"
edition = "2024"

[dependencies]
embassy-executor = { version = "0.7", features = ["arch-cortex-m", "executor-thread"] }
embassy-stm32 = { version = "0.4", features = [
    "stm32f401cc", 
    "time-driver-any", 
    "exti", 
    "memory-x"
    ] }
embassy-time = { version = "0.5", features = ["generic-queue-8"] }
cortex-m = { version = "0.7", features = ["critical-section-single-core"] }
cortex-m-rt = "0.7"
defmt = "0.3" 
defmt-rtt = "0.4" 
panic-probe = { version = "0.3", features = ["print-defmt"] } 
panic-halt = "0.2"
embassy-sync = { version = "0.6.0", features = ["defmt"] }
static_cell = "2.1.0"
mpu6050 = "0.1.6"
rust-ekf = { path = "../rust-ekf" }
nalgebra = { version = "0.33.2", default-features = false, features = ["libm"] }

[profile.dev]
opt-level = "z"
lto = true
codegen-units = 1